--- a/packaging/msi/Product.wxs
+++ b/packaging/msi/Product.wxs
@@ -15,14 +15,14 @@
         <MediaTemplate EmbedCab="yes" />
 
         <!-- Define the product icon -->
-        <Icon Id="icon.ico" SourceFile="!(bindpath.SOURCE_ROOT)\packaging\msi\resources\product.ico"/>
+        <Icon Id="icon.ico" SourceFile="!(bindpath.SOURCE_ROOT)packaging\msi\resources\product.ico"/>
         <Property Id="ARPPRODUCTICON" Value="icon.ico" />
 
         <!-- Use the default WixUI_InstallDir dialog set and personalize the license an images -->
         <ui:WixUI Id="WixUI_InstallDir" InstallDirectory="INSTALLFOLDER" />
-        <WixVariable Id="WixUILicenseRtf" Value="!(bindpath.SOURCE_ROOT)\packaging\msi\docs\LICENSE.rtf"/>
-        <WixVariable Id="WixUIBannerBmp" Value="!(bindpath.SOURCE_ROOT)\packaging\msi\resources\banner.jpg"/>
-        <WixVariable Id="WixUIDialogBmp" Value="!(bindpath.SOURCE_ROOT)\packaging\msi\resources\dialog.jpg"/>
+        <WixVariable Id="WixUILicenseRtf" Value="!(bindpath.SOURCE_ROOT)packaging\msi\docs\LICENSE.rtf"/>
+        <WixVariable Id="WixUIBannerBmp" Value="!(bindpath.SOURCE_ROOT)packaging\msi\resources\banner.jpg"/>
+        <WixVariable Id="WixUIDialogBmp" Value="!(bindpath.SOURCE_ROOT)packaging\msi\resources\dialog.jpg"/>
 
         <!-- Define the directory structure -->
         <StandardDirectory Id="ProgramFiles64Folder">
@@ -39,29 +39,29 @@
          <!-- VC140 C++ runtime merge module -->
         <StandardDirectory Id="TARGETDIR">
             <Merge Id="VC143CRT"
-                SourceFile="!(bindpath.MERGE_MODULES)\Microsoft_VC143_CRT_x64.msm"
+                SourceFile="!(bindpath.MERGE_MODULES)Microsoft_VC143_CRT_x64.msm"
                 Language="0"/>
         </StandardDirectory>
 
         <!-- Define the components that install the require files -->
         <ComponentGroup Id="ProductComponents">
             <!-- Binary files from the x64 Release build -->
-            <Files Include="!(bindpath.STAGING_DIR)\bin\**" Directory="BinFolder"/>
+            <Files Include="!(bindpath.STAGING_DIR)bin\**" Directory="BinFolder"/>
 
             <!-- The IceGrid GUI jar -->
-            <File Source="!(bindpath.SOURCE_ROOT)\java\lib\icegridgui.jar" Directory="BinFolder" />
+            <File Source="!(bindpath.SOURCE_ROOT)java\lib\icegridgui.jar" Directory="BinFolder" />
 
             <!-- Slice Files-->
-            <Files Include="!(bindpath.STAGING_DIR)\slice\**" Directory="SliceFolder"/>
+            <Files Include="!(bindpath.STAGING_DIR)slice\**" Directory="SliceFolder"/>
 
             <!-- Config Files -->
-            <Files Include="!(bindpath.SOURCE_ROOT)\cpp\config\*.cfg" Directory="ConfigFolder"/>
-            <Files Include="!(bindpath.SOURCE_ROOT)\cpp\config\templates.xml" Directory="ConfigFolder"/>
+            <Files Include="!(bindpath.SOURCE_ROOT)cpp\config\*.cfg" Directory="ConfigFolder"/>
+            <Files Include="!(bindpath.SOURCE_ROOT)cpp\config\templates.xml" Directory="ConfigFolder"/>
 
             <!-- License Files -->
-            <File Id="License" Source="!(bindpath.SOURCE_ROOT)\LICENSE" Name="LICENSE.txt" />
-            <File Id="IceLicense" Source="!(bindpath.SOURCE_ROOT)\ICE_LICENSE" Name="ICE_LICENSE.txt" />
-            <File Id="ThirdPartyLicense" Source="!(bindpath.SOURCE_ROOT)\packaging\msi\docs\THIRD_PARTY_LICENSE.txt" />
+            <File Id="License" Source="!(bindpath.SOURCE_ROOT)LICENSE" Name="LICENSE.txt" />
+            <File Id="IceLicense" Source="!(bindpath.SOURCE_ROOT)ICE_LICENSE" Name="ICE_LICENSE.txt" />
+            <File Id="ThirdPartyLicense" Source="!(bindpath.SOURCE_ROOT)packaging\msi\docs\THIRD_PARTY_LICENSE.txt" />
         </ComponentGroup>
 
         <!-- Define the components that install the start menu shortcuts -->
@@ -108,7 +108,7 @@
         </ComponentGroup>
 
         <!-- Define the IceGrid GUI icon -->
-        <Icon Id="IceGridGUIIcon" SourceFile="!(bindpath.SOURCE_ROOT)\java\src\IceGridGUI\src\main\resources\icons\icegrid.ico" />
+        <Icon Id="IceGridGUIIcon" SourceFile="!(bindpath.SOURCE_ROOT)java\src\IceGridGUI\src\main\resources\icons\icegrid.ico" />
 
         <!-- Add components to the MainFeature -->
         <Feature Id="MainFeature" Title="Ice" Level="1">
